# be_dev_task

./: .gitignore  README.md  pyproject.toml
src/: main.py  settings.py
src/chroma_db/: chroma_db.py
src/open_ai/: open_ai.py  template.py
src/rag_app/: rag_app.py
tests/: conftest.py  settings.py
tests/unit/: conftest.py
