[tool.poetry]
name = "easysoftware-task"
version = "0.1.0"
description = ""
authors = ["Jan Melicharik <melicharikjan96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.7.3"
pytest = "^8.2.2"
chromadb = "^0.5.0"
openai = "^1.33.0"
langchain = "^0.2.3"
langchain-community = "^0.2.4"
langchain-openai = "^0.1.8"
pydantic-settings = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
